# liftoff

./: .gitignore  Makefile.am  Rakefile  configure.ac
defaults/: Makefile.am  liftoffrc
homebrew/: liftoff.rb.in
lib/liftoff/: require.rb  version.rb.in
man/: Makefile.am  liftoffrc.5
src/: Makefile.am  liftoff.in
templates/: Makefile.am
